fix device mask blocking click on mobile

--- a/assets/scss/components/_device.scss
+++ b/assets/scss/components/_device.scss
@@ -106,6 +106,7 @@
   @include z-index(1, absolute);
   @extend %full-cover;
   background-size:contain;
+  pointer-events: none;
 }
 
 .device__inner {
